memperbaiki router untuk swagger
